<resources>
    <string name="appName">智学网</string>
    <string name="menuReportType">&#160;&#160;报告类型</string>
    <string name="menuAccountSecurity">&#160;&#160;账号安全</string>
    <string name="menuRelated">&#160;&#160;其他相关</string>
    <string name="menuReportExam">考试报告</string>
    <string name="menuReportHomework">作业报告</string>
    <string name="menuBindMobile">绑定手机</string>
    <string name="menuModifyPwd">修改密码</string>
    <string name="menuUpdate">检测更新</string>
    <string name="menuFeedback">意见反馈</string>
    <string name="menuAbout">关于我们</string>
    <string name="menuLogout">注销登录</string>
    <string name="menuSwitchAccount">切换账号</string>
    <string name="menuPaper">原卷查看</string>
    <string name="menuAnalyze">题目解析</string>
    <string name="menuGuess">好友伴学</string>
    <string name="loginTitle">欢迎登录</string>
    <string name="loginSubTitle">智学，让学习更简单！</string>
    <string name="loginUsername">输入手机号或用户名</string>
    <string name="loginPassword">输入密码</string>
    <string name="loginBtn">登录</string>
    <string name="loginReg">注册账号</string>
    <string name="loginForget">忘记密码</string>
    <string name="loginFailed">登录失败</string>
    <string name="regTitle">欢迎注册</string>
    <string name="regSubTitle">智学，让学习更简单</string>
    <string name="regPhoneNumber">输入手机号码</string>
    <string name="regPassword">输入密码（不少于6位）</string>
    <string name="regImgCode">输入图像验证码</string>
    <string name="regSmsBtn">获取验证码</string>
    <string name="regSmsCode">输入手机验证码</string>
    <string name="regBtn">注册</string>
    <string name="regSuccess">注册成功</string>
    <string name="smsSuccess">发送成功</string>
    <string name="valueIncorrect">参数填写不正确</string>
    <string name="actionConfirm">确定</string>
    <string name="actionReturn">返回</string>
    <string name="toastUpdate">加Q群获取最新版</string>
    <string name="toastLogout">注销登录？</string>
    <string name="toastFeedback">通过邮箱反馈</string>
    <string name="bindMobileTitle">请输入手机号码</string>
    <string name="bindCodeTitle">请输入验证码</string>
    <string name="bindBtn">绑定</string>
    <string name="bindCodeBtn">获取验证码</string>
    <string name="bindSuccess">绑定成功</string>
    <string name="modifySuccess">修改成功</string>
    <string name="modifyOriginTitle">请输入旧密码</string>
    <string name="modifyNewTitle">请输入新密码</string>
    <string name="modifyBtn">绑定</string>
    <string name="guessMyScore">我的分数</string>
    <string name="guessSubject">学科</string>
    <string name="guessFriendScore">TA的分数</string>
    <string name="guessSelect">选择</string>
    <string name="guessSelectText">请选择伴学对象</string>
    <string name="invokeQQFailed">未安装手Q或安装的版本不支持</string>
    <string name="invokeMailFailed">未安装邮箱软件</string>
    <string name="aboutContent">本软件为免费软件，由个人独立开发完成。\n此软件仅供学习交流，勿于商业用途。\n在软件中难免存在一些未修复的漏洞，我深感歉意。\n希望你能尽快联系我修复问题。</string>
    <string name="reportTitle">学情报告</string>
    <string name="paperTitle">原卷查看</string>
    <string name="analyzeTitle">题目解析</string>
    <string name="guessTitle">好友伴学</string>
    <string name="noFriends">没有好友</string>
    <string name="showError">全科无法查看</string>
    <string name="addSuccess">已将全班添加至列表</string>
    <string name="toastWait">请稍等</string>
</resources>