<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menuReportType">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menuReportExam"
                    android:title="@string/menuReportExam" />
                <item
                    android:id="@+id/menuReportHomework"
                    android:title="@string/menuReportHomework" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menuAccountSecurity">
        <menu>
            <item
                android:id="@+id/menuBindMobile"
                android:title="@string/menuBindMobile" />
            <item
                android:id="@+id/menuModifyPwd"
                android:title="@string/menuModifyPwd" />
        </menu>
    </item>
    <group android:id="@+id/group">
        <item
            android:id="@+id/menuSwitchAccount"
            android:title="@string/menuSwitchAccount" />
        <item
            android:id="@+id/menuLogout"
            android:title="@string/menuLogout" />
    </group>
    <item android:title="@string/menuRelated">
        <menu>
            <item
                android:id="@+id/menuUpdate"
                android:title="@string/menuUpdate" />
            <item
                android:id="@+id/menuFeedback"
                android:title="@string/menuFeedback" />
            <item
                android:id="@+id/menuAbout"
                android:title="@string/menuAbout" />
        </menu>
    </item>
</menu>