<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fadingEdge="none"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:textColor="@color/colorTitle"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.28" />

        <TextView
            android:id="@+id/loginSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loginSubTitle"
            android:textColor="@color/colorSubTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/loginUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@null"
            android:drawableBottom="@drawable/edit_line"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:hint="@string/loginUsername"
            android:inputType="text"
            android:maxLength="30"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textColorHint="@color/colorSubTitle"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginSubTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/loginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@null"
            android:drawableBottom="@drawable/edit_line"
            android:drawablePadding="6dp"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:maxLength="30"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textColorHint="@color/colorSubTitle"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUsername" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/loginBtn"
            android:textStyle="bold"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginReg"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginReg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/diver"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/diver"
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/loginReg"
            app:layout_constraintEnd_toStartOf=" @id/loginForget"
            app:layout_constraintStart_toEndOf="@id/loginReg"
            app:layout_constraintTop_toTopOf="@+id/loginReg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginForget"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginForget"
            android:textColor="@color/colorSubTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diver"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>