<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp">

    <TextView
        android:id="@+id/modifyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menuModifyPwd"
        android:textColor="@color/colorTitle"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modifyOriginTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/modifyOriginTitle"
        android:textColor="@color/colorTitle"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modifyTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/modifyOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@null"
        android:drawableBottom="@drawable/edit_line"
        android:drawablePadding="6dp"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyOriginTitle" />

    <TextView
        android:id="@+id/modifyNewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modifyNewTitle"
        android:textColor="@color/colorTitle"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modifyOrigin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/modifyNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:drawableBottom="@drawable/edit_line"
        android:drawablePadding="6dp"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyNewTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/modifyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modifyBtn"
        android:textStyle="bold"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modifyNew" />
</androidx.constraintlayout.widget.ConstraintLayout>